Fix: brane rpc (#53)
* fix(rpc): use AtomicReferenceArray for thread-safe slot allocation [CRIT-1]

Replace raw CompletableFuture[] array with AtomicReferenceArray to fix
TOCTOU race condition in WebSocketProvider slot allocation.

Changes:
- Replace slots array with AtomicReferenceArray<CompletableFuture<JsonRpcResponse>>
- Use CAS loop in allocateSlot() for atomic slot claiming
- Use getAndSet() in response handling for atomic get-and-clear
- Use compareAndSet() in timeout handling to only clear if slot matches
- Update class Javadoc to document thread-safety guarantees

This prevents race conditions where:
- Responses could be delivered to wrong requests
- Requests could be silently dropped
- Memory leaks from orphaned futures

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* fix(rpc): track EventLoopGroup ownership to prevent resource leak [CRIT-2]

When a custom EventLoopGroup is provided via WebSocketConfig.eventLoopGroup(),
the close() method should NOT shut it down - the caller is responsible.

Changes:
- Add ownsEventLoopGroup boolean field to track ownership
- Set to false when using externally-provided group
- Set to true when creating internal group
- Only call shutdownGracefully() when ownsEventLoopGroup is true
- Update Javadoc to clarify ownership semantics

This prevents unexpectedly shutting down shared EventLoopGroups used
across multiple providers.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* fix(rpc): proper Disruptor and channel cleanup on close [CRIT-3]

The close() method now properly cleans up resources without losing requests:

Changes:
- Use compareAndSet for idempotent close (prevents double-close issues)
- Fail all pending futures BEFORE shutting down Disruptor
- Use disruptor.halt() since pending requests are already failed
- Wait for channel close using sync()
- Wait for EventLoopGroup 